[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["blas"]
blas = ["ndarray-linalg"]


[dependencies]
bitvec = "~1"
ndarray = { version="~0.15", features=["serde"] }
ndarray-linalg = { version = "0.14", features = ["openblas-system"], optional = true }
structopt = "0.3"


[[bin]]
name = "main"
path = "src/main.rs"